Add: live search with validation form, user like/unlike hotel, create hotels page(index and single)

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -113,3 +113,18 @@ a.desc:after {
 .nav > li > form > button.logout:focus {
     outline: none;
 }
+
+
+.hotel-link {
+    color: #212529;
+}
+
+.hotel-link:link {
+    text-decoration: none;
+    color: #212529;
+}
+
+.carousel-control-prev, .carousel-control-next {
+    max-height: 15%;
+    margin-top: 31%;
+}
