--- a/web/css/site.css
+++ b/web/css/site.css
@@ -178,4 +178,46 @@ a.desc:after {
 .search {
     width: 100%;
 }
+
+/*.search-img {*/
+/*    right: 0;*/
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*}*/
+/*.search-img img {*/
+/*    max-width: 100%;*/
+/*    max-height: 100%;*/
+/*}*/
+
+.list-city {
+    position: absolute;
+    width: 100%;
+    z-index: 1;
+}
+
+.list-group-item {
+    padding: 0.5rem 1.25rem;
+}
+.list-group-item:hover{
+     background: gray;
+}
 /*Search area end*/
+
+/*Parameters modal area start */
+.parameters-modal > .modal-dialog {
+    max-width: 350px;
+    top: 150px;
+    left: 380px;
+}
+
+.control-counter {
+    text-align: end;
+}
+
+.count {
+    outline: none;
+    max-width: 15%;
+    pointer-events: none;
+}
+/*Parameters modal area end */
